chore: add shadcn, related settings n pkgs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,13 @@
     {
       "path": "./tsconfig.app.json"
     }
-  ]
+  ],
+  "compilerOptions": {
+    "baseUrl": "./src",
+    "allowJs": true,
+    "paths": {
+      "@shared/*": ["shared/*"],
+      "@components/*": ["components/*"]
+    }
+  }
 }
