--- a/package.json
+++ b/package.json
@@ -8,27 +8,44 @@
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build",
-    "type-check": "vue-tsc --build"
+    "type-check": "vue-tsc --build",
+    "clear": "rm -rf node_modules/.vite"
   },
   "dependencies": {
     "@tanstack/vue-query": "5.74.4",
+    "@tanstack/vue-table": "^8.21.3",
+    "@vee-validate/zod": "^4.15.1",
     "@vueuse/core": "13.1.0",
     "@vueuse/router": "13.1.0",
+    "class-variance-authority": "0.7.1",
+    "clsx": "2.1.1",
+    "embla-carousel-vue": "^8.6.0",
+    "lucide-vue-next": "0.548.0",
     "pinia": "3.0.1",
-    "shadcn-vue": "2.0.1",
+    "reka-ui": "2.6.0",
+    "shadcn-vue": "2.3.2",
+    "tailwind-merge": "^3.3.1",
+    "tw-animate-css": "^1.4.0",
+    "vee-validate": "^4.15.1",
     "vue": "3.5.13",
-    "vue-router": "4.5.0"
+    "vue-router": "4.5.0",
+    "vue-sonner": "^2.0.9",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
+    "@tailwindcss/vite": "4.1.16",
     "@tsconfig/node22": "22.0.1",
     "@types/node": "22.14.0",
     "@vitejs/plugin-vue": "5.2.3",
     "@vue/tsconfig": "0.7.0",
     "npm-run-all2": "7.0.2",
+    "sass": "1.93.2",
+    "tailwindcss": "4.1.16",
     "typescript": "~5.8.0",
     "vite": "6.2.4",
     "vite-plugin-vue-devtools": "7.7.2",
+    "vite-tsconfig-paths": "5.1.4",
     "vue-tsc": "2.2.8"
   },
   "packageManager": "pnpm@10.10.0+sha512.d615db246fe70f25dcfea6d8d73dee782ce23e2245e3c4f6f888249fb568149318637dca73c2c5c8ef2a4ca0d5657fb9567188bfab47f566d1ee6ce987815c39"
