--- a/package.json
+++ b/package.json
@@ -13,24 +13,24 @@
   },
   "dependencies": {
     "@tanstack/vue-query": "5.74.4",
-    "@tanstack/vue-table": "^8.21.3",
-    "@vee-validate/zod": "^4.15.1",
+    "@tanstack/vue-table": "8.21.3",
+    "@vee-validate/zod": "4.15.1",
     "@vueuse/core": "13.1.0",
     "@vueuse/router": "13.1.0",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
-    "embla-carousel-vue": "^8.6.0",
+    "embla-carousel-vue": "8.6.0",
     "lucide-vue-next": "0.548.0",
     "pinia": "3.0.1",
     "reka-ui": "2.6.0",
     "shadcn-vue": "2.3.2",
-    "tailwind-merge": "^3.3.1",
-    "tw-animate-css": "^1.4.0",
-    "vee-validate": "^4.15.1",
+    "tailwind-merge": "3.3.1",
+    "tw-animate-css": "1.4.0",
+    "vee-validate": "4.15.1",
     "vue": "3.5.13",
     "vue-router": "4.5.0",
-    "vue-sonner": "^2.0.9",
-    "zod": "^4.1.12"
+    "vue-sonner": "2.0.9",
+    "zod": "4.1.12"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
@@ -44,7 +44,9 @@
     "tailwindcss": "4.1.16",
     "typescript": "~5.8.0",
     "vite": "6.2.4",
+    "vite-plugin-svg-icons": "2.0.1",
     "vite-plugin-vue-devtools": "7.7.2",
+    "vite-svg-loader": "5.1.0",
     "vite-tsconfig-paths": "5.1.4",
     "vue-tsc": "2.2.8"
   },
