--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   },
   "dependencies": {
     "@tanstack/vue-query": "5.74.4",
-    "@tanstack/vue-table": "8.21.3",
     "@vee-validate/zod": "4.15.1",
     "@vueuse/core": "13.1.0",
     "@vueuse/router": "13.1.0",
@@ -44,6 +43,7 @@
     "tailwindcss": "4.1.16",
     "typescript": "~5.8.0",
     "vite": "6.2.4",
+    "vite-imagetools": "9.0.0",
     "vite-plugin-svg-icons": "2.0.1",
     "vite-plugin-vue-devtools": "7.7.2",
     "vite-svg-loader": "5.1.0",
