--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,14 +1,20 @@
 {
   "extends": "@vue/tsconfig/tsconfig.dom.json",
-  "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
+  "include": ["env.d.ts", "src/**/*", "src/**/*.vue", "tailwind.config.js"],
   "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "allowJs": true,
     "baseUrl": "./src",
     "paths": {
+      "@/*": ["/*"],
+      "@root/*": ["../*"],
+      "@app/*": ["app/*"],
+      "@layouts/*": ["layouts/*"],
       "@shared/*": ["shared/*"],
-      "@components/*": ["components/*"]
+      "@composables/*": ["shared/composables/*"],
+      "@components/*": ["components/*"],
+      "@views/*": ["views/*"]
     }
   }
 }
