--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -13,6 +13,8 @@
       "@layouts/*": ["layouts/*"],
       "@shared/*": ["shared/*"],
       "@composables/*": ["shared/composables/*"],
+      "@store/*": ["store/*"],
+      "@features/*": ["features/*"],
       "@components/*": ["components/*"],
       "@views/*": ["views/*"]
     }
