--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -11,6 +11,8 @@
       "@root/*": ["../*"],
       "@app/*": ["app/*"],
       "@layouts/*": ["layouts/*"],
+      "@api": ["api"],
+      "@entities/*": ["entities/*"],
       "@shared/*": ["shared/*"],
       "@composables/*": ["shared/composables/*"],
       "@store/*": ["store/*"],
