ft: tackling products composables n utils

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -14,7 +14,7 @@
       "@api": ["api"],
       "@entities/*": ["entities/*"],
       "@shared/*": ["shared/*"],
-      "@composables/*": ["shared/composables/*"],
+      "@composables": ["composables"],
       "@store/*": ["store/*"],
       "@features/*": ["features/*"],
       "@components/*": ["components/*"],
