--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lucide-vue-next": "0.548.0",
     "pinia": "3.0.1",
     "pinia-plugin-persistedstate": "4.7.1",
+    "qs": "6.14.0",
     "reka-ui": "2.6.0",
     "shadcn-vue": "2.3.2",
     "tailwind-merge": "3.3.1",
@@ -37,6 +38,7 @@
     "@tailwindcss/vite": "4.1.16",
     "@tsconfig/node22": "22.0.1",
     "@types/node": "22.14.0",
+    "@types/qs": "6.14.0",
     "@vitejs/plugin-vue": "5.2.3",
     "@vue/tsconfig": "0.7.0",
     "npm-run-all2": "7.0.2",
